# LANTERNv2.0

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  lantern  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  codeql-config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml
agent/: README.md  __init__.py  cli.py  pyproject.toml  requirements.txt
agent/agent_black/: __init__.py  a2a_server.py  adaptive_engine.py  auto_learn.py  ctf_utils.py  improvement_applier.py  knowledge_loader.py  lantern_runner.py  learning.py  (+6 more)
configs/: auth_example.yml
core/: __init__.py  auth.py  auth_manager.py  bypass.py  cache.py  callback.py  cicd.py  cli.py  collab.py  confidence.py  crawler.py  cve_db.py  differ.py  dns_brute.py  engine.py  fuzzer.py  http.py  js_analyzer.py  learned.py  oob.py  poc.py  reporter.py  scope.py  tech_detect.py  utils.py  workflow.py
docs/: COMMANDS.md  Commands-Expanded.md  INDEX.md  QUICKSTART.md
lab/: README.md  __init__.py  benchmark.py  docker-compose.yml  run-all-tests.bat  run-all-tests.ps1  run-all-tests.sh  start-lab.bat  start-lab.ps1  start-lab.sh
modules/: accessctl.py  account.py  api.py  apiver.py  auth.py  base.py  brokenlinks.py  cache.py  cachepois.py  captcha.py  cdn.py  clickjack.py  cloud.py  cmdi.py  cookie.py  cors.py  crlf.py  csp.py  csrf.py  cve.py  deserial.py  dirbust.py  disclosure.py  dom.py  dork.py  download.py  emailinject.py  embed.py  fingerprint.py  fuzz.py  graphql.py  h2smuggle.py  headers.py  hostinject.py  hpp.py  idor.py  jwt.py  ldap.py  lfi.py  logic.py  (+23 more)
payloads/: cmdi.txt  crlf.txt  headers_bypass.txt  lfi.txt  paths.txt  redirect.txt  smuggle.txt  sqli.txt  sqli_advanced.txt  ssrf.txt  ssti.txt  xss.txt  xss_advanced.txt  xss_master.txt  xxe.txt
presets/: api.yml  exploit.yml  fast.yml  stealth.yml  thorough.yml
workflows/: __init__.py  auth_bypass.yml  password_reset.yml  ssrf_chain.yml
(+94 files in other folders)
