[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lantern-scanner"
version = "2.0.0"
description = "Web vulnerability scanner with automatic exploitation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "NET"}
]
keywords = ["security", "vulnerability", "scanner", "pentest", "exploitation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9.0",
    "aiofiles>=23.0.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pyyaml>=6.0",
    "dnspython>=2.4.0",
    "cryptography>=41.0.0",
    "pyjwt>=2.8.0",
]

[project.urls]
Homepage = "https://github.com/Suffix30/LANTERNv2.0"
Repository = "https://github.com/Suffix30/LANTERNv2.0"
Issues = "https://github.com/Suffix30/LANTERNv2.0/issues"

[project.scripts]
lantern = "core.cli:run"
black = "agent.cli:main"

[project.optional-dependencies]
agent = [
    "ollama>=0.1.0",
    "langchain>=0.1.0",
    "chromadb>=0.4.0",
    "PyMuPDF>=1.23.0",
]

[tool.setuptools]
packages = ["core", "modules", "payloads", "presets", "agent", "agent.scripts", "agent.agents", "agent.agent_black", "agent.external", "agent.external.modules", "agent.integration", "agent.pi_integration"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.txt", "*.yml"]
payloads = ["*.txt", "dorks/*.txt"]
presets = ["*.yml"]
